--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,49 +8,53 @@
     <link href="style.css" rel="stylesheet">
     <title>Scandi</title>
 </head>
+
 <body>
     <header height="750px">
         <nav class="navbar">
             <li class="logo"> <a href="#"> SCANDI </a> </li>
             <li class="navbar_el"> <a href="#aboutUs"> О компании </a> </li>
-            <li class="navbar_el"> <a href="#achievements"> Портфолио </a> </li>
-            <li class="navbar_el"> <a href="#"> Комадна </a> </li>
-            <li class="navbar_el"> <a href="#"> Как мы работаем </a> </li>
-            <li class="navbar_el"> <a href="#"> Отзывы клиентов </a> </li>
-            <li class="navbar_el"> <a href="#"> Оставить заявку </a> </li>
+            <li class="navbar_el"> <a href="#ourWorks"> Портфолио </a> </li>
+            <li class="navbar_el"> <a href="#team"> Комадна </a> </li>
+            <li class="navbar_el"> <a href="#howWeWork"> Как мы работаем </a> </li>
+            <li class="navbar_el"> <a href="#reviews"> Отзывы клиентов </a> </li>
+            <li class="navbar_el"> <a href="#sumbitApplication"> Оставить заявку </a> </li>
             <li class="number"> <a href="tel:+79818574624"> +7 (981) 857-46-24 </a> </li>
         </nav>
         <div class="info">
             <h1>Поможем сделать <br> вашу квартиру <br> уютнее</h1>
-            <p>Подбираем текстиль, мебель и аксессуары <br> под ваш интерьер, находим магазины <br> и помогаем организовать доставку </p>
+            <p>Подбираем текстиль, мебель и аксессуары <br> под ваш интерьер, находим магазины <br> и помогаем
+                организовать доставку </p>
             <button class="navbtn">Оставить заявку</button>
         </div>
     </header>
     <section class="aboutUs" id="aboutUs" height="750px">
         <h2 class="aboutUsHead">О НАС</h2>
         <div class="aboutUsContent">
-            <div class="imgAboutUs" heigth="550px" width="450px"> 32132131 </div>
-            <div class="textAboutUs"> 
-                <p> Премиальный европейский текстиль — одно из самых главных направлений работы коллектива. Создавать неповторимые
-                    интерьеры для наших дорогих клиентов, уделяя внимание мельчайшим деталям — вот то, что по-настоящему вдохновляет
+            <div class="imgAboutUs" heigth="492px" width="470px"> <img src="imgAboutUs.jpg" alt="" heigth="492px" width="470px" > </div>
+            <div class="textAboutUs">
+                <p> Премиальный европейский текстиль — одно из самых главных направлений работы коллектива. Создавать
+                    неповторимые
+                    интерьеры для наших дорогих клиентов, уделяя внимание мельчайшим деталям — вот то, что по-настоящему
+                    вдохновляет
                     дизайнеров нашей студии.</p>
-                    <br>
+                <br>
                 <p> Наш коллектив сделает все, чтобы после сотрудничества с нами, Вам было приятно сказать:
                     « Да! Это именно то, что действительно достойно моего дома!»</p>
             </div>
         </div>
     </section>
-    <section class="achievements" id="achievements" height="250px">  
+    <section class="achievements" height="250px">
         <div class="achievementsBlock">
-            <p class="achievementsText"> 5  <br> лет опыта</p>
+            <p class="achievementsText"> 5 <br> лет опыта</p>
             <p class="achievementsText"> 100 <br> проектов</p>
             <p class="achievementsText"> 10 <br> наград</p>
         </div>
     </section>
-    <section class="ourWorks">
+    <section class="ourWorks" id="ourWorks">
         <h2 class="ourWorksHead">НАШИ РАБОТЫ</h2>
         <div class="ourWorksBlock">
-            <p class="text">  </p>
+            <p class="text"> </p>
             <p class="img1" height="450px" width="690px"> <img> </p>
             <p class="img2" height="450px" width="480px"> <img> </p>
             <p class="img3" height="450px" width="480px"> <img> </p>
@@ -58,7 +63,69 @@
             Смотреть еще
         </button>
     </section>
-    <section></section>
-    <footer></footer>
+    <section class="team" id="team">
+        <div class="teamBlock">
+            <h2 class="teamHead">КОМАНДА</h2>
+            <div class="imgBlock">
+                <p class="imgTeam" heigth="300px" width="330px"> <img src="imgTeam1.jpg" alt="" ></p>
+                <p class="imgTeam" heigth="300px" width="330px"> <img src="imgTeam2.jpg" alt=""></p>
+                <p class="imgTeam" heigth="300px" width="330px"> <img src="imgTeam3.jpg" alt=""></p>
+                <p class="textImgTeam" heigth="300px" width="330px"></p>
+                <p class="textImgTeam" heigth="300px" width="330px"></p>
+                <p class="textImgTeam" heigth="300px" width="330px"></p>
+            </div>
+    </section>
+    <section class="howWeWork" id="howWeWork">
+        <h2 class="howWeWorkHead">КАК МЫ РАБОТАЕМ</h2>
+        <div class="howWeWorkBlock">
+            <p class="textNumberHowWeWork">1</p>
+            <p class="textNumberHowWeWork">2</p>
+            <p class="textNumberHowWeWork">3</p>
+            <p class="textNumberHowWeWork">4</p>
+            <p class="textHowWeWork">Знакомимся, выезжаем на объект, утверждаем концепцию, подписывем договор.</p>
+            <p class="textHowWeWork">Подбираем мебель, текстиль, аксессуры. Делаем 3D- зуализацию.</p>
+            <p class="textHowWeWork">Находим нужные магазины, помогаем с доставкой и оплатой товаров.</p>
+            <p class="textHowWeWork">Воплощаем проект в жизнь: расставляем мебель и цветы, вешаем шторы, находим места
+                для мелочей</p>
+        </div>
+    </section>
+    <section class="reviews" id="reviews">
+        <h2 class="reviewsHead">ОТЗЫВЫ</h2>
+        <div class="reviewsBlock">
+            <p class="btnReviewsLeft"><a href="#reviews"> g</a></p>
+            <p class="textReviewsBlock">
+                <span class="textReviews">«Восторг! Спасибо, за комфортную жизнь. Очень рада, что выбрала вашу студию
+                    для украшения своего дома.
+                    Работа шла быстро, было очень приятно общаться и взаимодествовайть с сотрудниками. Не ожидала, что
+                    это будет так легко!
+                    Буду советовать и своим друзьям к вам обращаться!» <br> <br>
+                    АННА БЕЛОВСКАЯ</span>
+            </p>
+            <p class="imgReviewsUp"></p>
+            <p class="imgReviewsDown"></p>
+            <p class="btnReviewsRight"><a href="#reviews">g</a></p>
+        </div>
+    </section>
+    <section class="sumbitApplication" id="sumbitApplication">
+        <div class="sumbitApplicationBlock">
+            <div class="ApplicationText">
+                <h2 class="sumbitApplicationHead">ОСТАВИТЬ ЗАЯВКУ</h2>
+                <p class="sumbitApplicationText">Оставьте свои контакты. Менеджер перезвонит <br> в удобное вам время и ответит на все вопросы.</p>
+                <form id="application">
+                    <p><input class="applicationInput" type="text" placeholder="Введите имя"></p>
+                    <p><input class="applicationInput" type="tel" name="phone" id="phone" placeholder="Введите телефон">
+                    </p>
+                    <p><input class="applicationPress" type="submit" value="Отправить"></p>
+                </form>
+            </div>
+            <p class="map">sjakjfkajfksjsfkld</p>
+        </div>
+    </section>
+    <footer>
+        <p class="footerText"><a href="tel:+79818574624"> +7 (981) 857-46-24 </a></p>
+        <p class="footerText">г. Санкт-петербург, ул. Большая Конюшенная, 19</p>
+        <p class="footerText">ИП Королёва А.А.</p>
+    </footer>
 </body>
+
 </html>
