--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="Logo.svg" type="image/x-icon">
     <link href="style.css" rel="stylesheet">
     <title>Scandi</title>
 </head>
@@ -12,10 +13,10 @@
 <body>
     <header height="750px">
         <nav class="navbar">
-            <li class="logo"> <a href="#"> SCANDI </a> </li>
+            <li class="logo"> <a href="#"><img src="Logo.svg" height="24px"> &nbsp; SCANDI</a> </li>
             <li class="navbar_el"> <a href="#aboutUs"> О компании </a> </li>
             <li class="navbar_el"> <a href="#ourWorks"> Портфолио </a> </li>
-            <li class="navbar_el"> <a href="#team"> Комадна </a> </li>
+            <li class="navbar_el"> <a href="#team"> Команда </a> </li>
             <li class="navbar_el"> <a href="#howWeWork"> Как мы работаем </a> </li>
             <li class="navbar_el"> <a href="#reviews"> Отзывы клиентов </a> </li>
             <li class="navbar_el"> <a href="#sumbitApplication"> Оставить заявку </a> </li>
@@ -31,7 +32,8 @@
     <section class="aboutUs" id="aboutUs" height="750px">
         <h2 class="aboutUsHead">О НАС</h2>
         <div class="aboutUsContent">
-            <div class="imgAboutUs" heigth="492px" width="470px"> <img src="imgAboutUs.jpg" alt="" heigth="492px" width="470px" > </div>
+            <div class="imgAboutUs" heigth="492px" width="470px"> <img src="imgAboutUs.jpg" alt="" heigth="492px"
+                    width="470px"> </div>
             <div class="textAboutUs">
                 <p> Премиальный европейский текстиль — одно из самых главных направлений работы коллектива. Создавать
                     неповторимые
@@ -55,9 +57,9 @@
         <h2 class="ourWorksHead">НАШИ РАБОТЫ</h2>
         <div class="ourWorksBlock">
             <p class="text"> </p>
-            <p class="img1" height="450px" width="690px"> <img> </p>
-            <p class="img2" height="450px" width="480px"> <img> </p>
-            <p class="img3" height="450px" width="480px"> <img> </p>
+            <p class="img1" height="450px" width="690px"><img src="img1.jpg" alt=""></p>
+            <p class="img2" height="450px" width="480px"><img src="img2.jpg" alt=""></p>
+            <p class="img3" height="450px" width="480px"><img src="img3.jpg" alt=""></p>
         </div>
         <button class="ourWorkbtn">
             Смотреть еще
@@ -67,12 +69,16 @@
         <div class="teamBlock">
             <h2 class="teamHead">КОМАНДА</h2>
             <div class="imgBlock">
-                <p class="imgTeam" heigth="300px" width="330px"> <img src="imgTeam1.jpg" alt="" ></p>
-                <p class="imgTeam" heigth="300px" width="330px"> <img src="imgTeam2.jpg" alt=""></p>
-                <p class="imgTeam" heigth="300px" width="330px"> <img src="imgTeam3.jpg" alt=""></p>
-                <p class="textImgTeam" heigth="300px" width="330px"></p>
-                <p class="textImgTeam" heigth="300px" width="330px"></p>
-                <p class="textImgTeam" heigth="300px" width="330px"></p>
+                <p class="imgTeam" heigth="250px" width="320px"> <img src="imgTeam1.jpg" alt=""></p>
+                <p class="imgTeam" heigth="250px" width="320px"> <img src="imgTeam2.jpg" alt=""></p>
+                <p class="imgTeam" heigth="250px" width="320px"> <img src="imgTeam3.jpg" alt=""></p>
+                <p class="textImgTeam" heigth="250px" width="320px">Это Маша, наш главный дизайнер. Она отвечает за
+                    дизайн-проект, приезжает к вам домой, общается и помогает сделать вашу квартиру красивой и уютной.
+                </p>
+                <p class="textImgTeam" heigth="250px" width="320px">С нашим менеджером Сашей вы познакомитесь в первую
+                    очередь. Она проконсультирует вас, соберёт все документы и ответит на все вопросы.</p>
+                <p class="textImgTeam" heigth="250px" width="320px">Катя тоже занимается дизайном. Она всегда находит
+                    общий язык с клиентами и точно знает, как обсутроить дом так, чтобы вам понравилось.</p>
             </div>
     </section>
     <section class="howWeWork" id="howWeWork">
@@ -92,7 +98,7 @@
     <section class="reviews" id="reviews">
         <h2 class="reviewsHead">ОТЗЫВЫ</h2>
         <div class="reviewsBlock">
-            <p class="btnReviewsLeft"><a href="#reviews"> g</a></p>
+            <p class="btnReviewsLeft"><a href="#reviews">&lt;</a></p>
             <p class="textReviewsBlock">
                 <span class="textReviews">«Восторг! Спасибо, за комфортную жизнь. Очень рада, что выбрала вашу студию
                     для украшения своего дома.
@@ -101,16 +107,17 @@
                     Буду советовать и своим друзьям к вам обращаться!» <br> <br>
                     АННА БЕЛОВСКАЯ</span>
             </p>
-            <p class="imgReviewsUp"></p>
-            <p class="imgReviewsDown"></p>
-            <p class="btnReviewsRight"><a href="#reviews">g</a></p>
+            <p class="imgReviewsUp"><img src="imgReviewsUp.jpg" alt="" height="250px"></p>
+            <p class="imgReviewsDown"><img src="imgReviewsDown.jpg" alt="" height="250px"></p>
+            <p class="btnReviewsRight"><a href="#reviews">&gt;</a></p>
         </div>
     </section>
     <section class="sumbitApplication" id="sumbitApplication">
         <div class="sumbitApplicationBlock">
             <div class="ApplicationText">
                 <h2 class="sumbitApplicationHead">ОСТАВИТЬ ЗАЯВКУ</h2>
-                <p class="sumbitApplicationText">Оставьте свои контакты. Менеджер перезвонит <br> в удобное вам время и ответит на все вопросы.</p>
+                <p class="sumbitApplicationText">Оставьте свои контакты. Менеджер перезвонит <br> в удобное вам время и
+                    ответит на все вопросы.</p>
                 <form id="application">
                     <p><input class="applicationInput" type="text" placeholder="Введите имя"></p>
                     <p><input class="applicationInput" type="tel" name="phone" id="phone" placeholder="Введите телефон">
@@ -118,7 +125,7 @@
                     <p><input class="applicationPress" type="submit" value="Отправить"></p>
                 </form>
             </div>
-            <p class="map">sjakjfkajfksjsfkld</p>
+            <p class="map"></p>
         </div>
     </section>
     <footer>
